# hex_ros_urdf_archer_y6

./: CMakeLists.txt  README.md  package.xml
launch/ros1/: display_empty.launch  display_gp100.launch  display_gr100.launch
launch/ros2/: display_empty.launch.py  display_gp100.launch.py  display_gr100.launch.py
meshes/: base_link.STL  gp100_base_link.STL  gp100_link_1.STL  gp100_link_2.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
urdf/: empty.urdf  gp100.urdf  gp100_comp.urdf  gp100_full.urdf  gr100_comp.urdf  gr100_full.urdf
